--- a/etc/php/7.4/fpm/php-fpm.conf
+++ b/etc/php/7.4/fpm/php-fpm.conf
@@ -39,7 +39,7 @@ error_log = /app/log/php7.4-fpm.log
 ; Log level
 ; Possible Values: alert, error, warning, notice, debug
 ; Default Value: notice
-;log_level = notice
+log_level = error
 
 ; If this number of child processes exit with SIGSEGV or SIGBUS within the time
 ; interval set by emergency_restart_interval then FPM will restart. A value
